<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/base_tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarLayout"
        android:background="@color/BC_3"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:src="@drawable/icon_ipone" />

        <com.itcalf.renhe.view.TextView
            android:id="@+id/isbindTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/bind_nobind"
            android:textColor="@color/C1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <com.itcalf.renhe.view.TextView
            android:id="@+id/bind_tip_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/bind_notice"
            android:textColor="@color/C3"
            android:textSize="@dimen/S4"
            android:visibility="gone" />

        <com.itcalf.renhe.view.Button
            android:id="@+id/bindBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/import_btn_shape"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="15dp"
            android:text="@string/renmaiquan_guide_bindphone_bt_text"
            android:textColor="@drawable/import_text_selector"
            android:textSize="@dimen/S2"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>