<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootRl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/base_tool_bar" />

    <ListView
        android:id="@+id/nearby_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarLayout"
        android:cacheColorHint="#00000000"
        android:divider="@null"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/no_location"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/nearby_list"
        android:background="@color/BC_3"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/location_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="130dp"
            android:src="@drawable/icon_location_2" />

        <com.itcalf.renhe.view.TextView
            android:id="@+id/instruction1_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/no_location"
            android:textColor="@color/C3"
            android:textSize="@dimen/S4" />

        <com.itcalf.renhe.view.TextView
            android:id="@+id/instruction2_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/guide"
            android:textColor="@color/C3"
            android:textSize="@dimen/S4" />
    </LinearLayout>

    <com.itcalf.renhe.view.TextView
        android:id="@+id/no_data_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_data"
        android:textColor="@color/_C2"
        android:textSize="@dimen/S1"
        android:visibility="gone" />

</RelativeLayout>